# MindStack

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  entrypoint.sh  manage.py  pip_audit_report.txt  pyproject.toml  pytest.ini  requirements.txt  view_template_map.gv
cortexdb/: README.md  apps.py  forms.py  models.py  services.py  test_create_notes.py  test_hello.py  tests.py  urls.py  views.py  views_crud.py
cortexdb/migrations/: 0001_initial.py  0002_tag_link_mergerecord_processing_splitgroup.py  0003_remove_link_source_remove_link_target_and_more.py  0004_tag_link_mergerecord_processing_splitgroup.py
cortexdb/templates/: _cortexdb_navbar.html  cortexdb_base.html  cortexdb_index.html  cortexdb_main.html  cortexdb_notes.html  cortexdb_notes_create.html  cortexdb_notes_delete.html  cortexdb_notes_detail.html  cortexdb_notes_form.html  cortexdb_notes_list.html  cortexdb_notes_update.html
docs/: view_template_mapping.md
home/: mixins.py  models.py  tests.py  urls.py  views.py
home/migrations/: 0001_initial.py
home/templates/: home.html
mindstack/: db.sqlite3  mixins.py  models.py  services.py  settings.py  test_view_token_logging.py  tests.py  tokenise_templates.py  urls.py  view_template_visualise.py  wsgi.py
mindstack/mindstack/: asgi.py  settings.py  urls.py
mindstack/templates/: _footer.html  _navbar.html  base.html
progress/: forms.py  models.py  test_completed.py  tests.py  urls.py  views.py
progress/migrations/: 0001_initial.py  0002_remove_progresslog_creator.py
progress/templates/: progress_base.html  (+5 more)
templates/: _navbar.html
(+12 files in other folders)
