[project]
name = "mindstack"
version = "0.1.0"
description = "knowledge-management app"
authors = [
    {name = "Syafiq Kay",email = "syafiq@syafiqkay.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
